samples/_failures_safe/1761539304_795271_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c45a99cf.c: In function ‘main’:
./samples/SAFE/__tmp_c45a99cf.c:118:19: error: ‘MATRI’ undeclared (first use in this function)
  118 |     Matrix mat2 = MATRI
      |                   ^~~~~
./samples/SAFE/__tmp_c45a99cf.c:118:19: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c45a99cf.c:118:5: error: expected ‘,’ or ‘;’ at end of input
  118 |     Matrix mat2 = MATRI
      |     ^~~~~~
./samples/SAFE/__tmp_c45a99cf.c:118:5: error: expected declaration or statement at end of input
